--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     <div class="container">
         <div class="left text-link">
             <p class="img">
-                <img src="img/pagehtml.png" alt="">
+                <img src="pagehtml.png" alt="">
             </p>
             <a href="html/index.html">page simple with html</a>
         </div>
         <div class="right text-link">
             <p class="img">
-                <img src="img/pagewireframe.png" alt="">
+                <img src="pagewireframe.png" alt="">
             </p>
             <a href="html/index.html">page simple with html and css</a>
         </div>
